# code-dot-org

./: .dockerignore  .drone.yml  .eslintrc.js  .eslintrc.yml  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .gitmodules  .gitpod.yml  .haml-lint.yml  .haml-lint_todo.yml  .hound.yml  .javascript-style.json  .javascript_style.json  .mention-bot  .nvmrc  .pdm-python  .prettierignore  .prettierrc.js  .rubocop.yml  .rubocop.yml.swp  .rubocop_hound.yml  .rubocop_new.yml  .rubocop_todo.yml  .scss-lint.yml  .travis.yml  BRAND_NEW_BRANCH.txt  BUILD-STEPS.md  Brewfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  FAKE-STAGING-FILE.txt  FAKE_FEATURE_FILE.txt  Gemfile  LICENSE  NOTICE  Pipfile  (+55 more)
.bundle.bak/: config
.chef/: knife.rb  local-adhoc.json  local-adhoc.rb
.circleci/: Dockerfile  config.yml
.devcontainer/: Dockerfile  archive-composez  boot.sh  chrome.json  compose.yml  devcontainer.json  docker-compose.yml  restore.sh  web.Dockerfile  wilkie-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  superlinter.yml
apps/: .babelrc  .browserslistrc  .eslintCustomMessagesFormatter.js  .eslintignore  .eslintrc.js  .eslintrc.yml  .flowconfig  .gitignore  .jshintignore  .jshintrc  .npmignore  .prettierrc.js  .stylelintrc.js  .travis.yml  Gruntfile.js  README.md  apollo.config.js  babel.config.json  build_with_core.sh  circular_dependencies.json  deploy.sh  envConstants.js  gulpfile.js  jest-environment.ts  jest.config.js  jest.config.ts  karma.conf.js  lab2EntryPoints.ts  lab2Entrypoints.ts  lab2Entrypoints.tsx  newrelic.js  npm-shrinkwrap.json  package.json  pipeline-config.json  playwright.config.ts  run-tests-in-parallel.sh  server.js  stylelint.config.js  sync-apps.sh  test-low-memory.sh  (+20 more)
aws/: .gitignore  Gemfile  Rakefile  bashrc  bashrc.erb  build  build.rake  build_ami  build_and_mail_log  build_docker.sh  chef-bootstrap.sh  ci_build  ci_build.rake  ci_build_logger.rb  ci_build_metrics.rb  ci_build_notifier.rb  ci_builder.rb  client.rb.template  cloud_formation.json  cloudformation.json  create_cloud_formations  cronjob  crontab.erb  crontab.rb  pack  packer.json  profile  profile.erb  remove_me.rb  secrets.tgz.aes  setup_dns  solo.rb.template  solr_server  varnish.config.erb  varnish.vcl.erb
base/: .gitignore  Dockerfile  Gemfile  engines  package.json  packs
base-image/: install.sh
blockly/: .gitignore  Gruntfile.js  LICENSE  NOTICE  README.md  build_with_core.sh  package.json
blockly-core/: .gitignore  README.md  blockly_compressed.js  blockly_uncompressed.js  blocks_compressed.js  blocks_uncompressed.js  deploy.sh  javascript_compressed.js  javascript_uncompressed.js  package.json  test.sh
chef/: .gitignore  Vagrantfile
code-studio/: .babelrc  (+9 more)
python/pycdo/: __init__.py  pyproject.toml
python/pycdo/pycdo/: json.py  repl.py
python/pycdo/pycdo/aichat/: safety.py
python/pycdo/pycdo/genai/: llmguard.py
python/pycdo/pycdo/test_module/: __init__.py  example_func.py  test_func.py
python/pycdo/test_module/: __init__.py
python/pycdo/tests/: test_test_module.py
python/pycdo/tests/aichat/: test_safety.py
python/pycdo/tests/genai/: test_llmguard.py
(+157505 files in other folders)
